--- a/style.css
+++ b/style.css
@@ -1,4 +1,35 @@
-.weather-app{
-    max-width: 600px;
-    margin: :0 auto;
+body {
+  font-family: arial, sans-serif;
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #dadde1;
+}
+
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
 }
