--- a/style.css
+++ b/style.css
@@ -2,15 +2,6 @@ body {
   font-family: arial, sans-serif;
 }
 
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #dadde1;
-}
-
 h1 {
   color: #878787;
   font-size: 24px;
@@ -32,4 +23,39 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #dadde1;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img{
+    margin-right:10px;
+    height:20px;
+    width: 64px:
+}
+
+.weather-temperature strong{
+    color: blueviolet;
+    font-size: 64px;
+    line-height: 1;
+    font-weight:400;
+
+}
+
+.weather-temperature .units{
+    position: relative;
+    font-size: 16px;
+    top: -34px;
 }
