--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.weather-app {
+  padding: 20px;
+  border-width: 5px;
+  border-style: solid;
+  border-color:1px solid #dadde1;
+  border-radius: 10px;
+}
+
 body {
   font-family: arial, sans-serif;
 }
@@ -35,12 +43,6 @@ text-transform: capitalize;
   margin: 30px auto;
 }
 
-.weather-app {
-  padding: 20px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #dadde1;
-}
 
 .overview {
   margin-bottom: 20px;
